[tool.poetry]
name = "tlemmarkdown"
version = "0.1.1"
description = ""
authors = ["Wojciech Orański <wojtekor9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygments = "^2.17.2"
markdown = "^3.5.2"


[tool.poetry.group.dev.dependencies]
types-pygments = "^2.17.0.20240106"
types-markdown = "^3.5.0.20240129"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
